<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2" >
    <string name="host_webrtc">95.213.170.164</string>
    <string name="port_webrtc">3003</string>
    <string name="maps_api_key">AIzaSyAZYUjtjOyE0I6fsiVSgjtFhjIz1cD3cCQ</string>
    <string name="vk_app_id">4542602</string>
    <string name="fb_app_id">1007594712602767</string>
    <string name="dummy_string">Dummy string</string>
    <string name="picode_button_del">del</string>
    <string name="login_button">подтвердить</string>
    <string name="enter_button">войти</string>
    <string name="network_error">Ошибка сети</string>
    <string name="test_warning">Предупреждение</string>
    <string name="warning">Внимание</string>
    <string name="enter_phone_number">Введите\nномер телефона</string>
    <string name="enter_pin_code">Введите код\nподтверждения</string>
    <string name="news_comments_title">Комментарии - </string>
    <string name="news_item_add_comment">Добавить комментарий: </string>
    <string name="news_item_add_comment_button">Добавить</string>
    <string name="mail_messages_take_photo">Снять фото</string>
    <string name="mail_messages_take_audio">Аудио сообщение</string>
    <string name="mail_messages_send">Отправить</string>
    <string name="settings_title">Свяжите свой аккаунт\nсоциальных сетей с\nup.me</string>
    <string name="settings_facebook">Facebook</string>
    <string name="settings_vk">Вконтакте</string>
    <string name="settings_self">ввести вручную</string>
    <string name="settings_exit">Выход</string>
    <string name="settings_or">или</string>
    <string name="product_title_credit">Кредитование</string>
    <string name="product_title_insurance">Страхование</string>
    <string name="product_title_tourism">Туризм</string>
    <string name="product_title_education">Образование</string>
    <string name="product_title_credit_without_bail">кредит наличными (без залога)</string>
    <string name="product_title_credit_bail">кредит наличными под залог</string>
    <string name="product_title_life_insurance">страхование жизни life</string>
    <string name="product_title_credit_risk_insurance">рисковое страхование</string>
    <string name="product_title_airline_tickets">авиа билеты по лучшей цене</string>
    <string name="product_title_credit_education_online">образование онлайн</string>
    <string name="product_description_credit_without_bail">Удобный кредит сроком от 14 дней до 36 месяцев, от 500 до 250 000 грн, на любые цели с простой схемой погашения.</string>
    <string name="product_description_credit_bail">Гарантированно быстрое решение финансовых потребностей, под залог транспортного средства, недвижемости, золота, бытовой техники.</string>
    <string name="product_description_life_insurance">Канадская фристайлистка Дара Хоуэлл выиграла "золото" Олимпийских игр в Сочи в слоупстайле. Победительница набрала 94,20 балла. Серебряным призером стала американка Дэвин Логан (85,40), бронзовым - еще одна спортсменка из Канады Ким Ламмэр</string>
    <string name="product_description_credit_risk_insurance">Надежное страхование Вашего автомобиля или другого транспортного средства от частичного или полного повреждения, а также страхование ответственности <водителя /></string>
    <string name="product_description_airline_tickets">Мы сотрудничаем с ведущими авиакомпаниями и подбираем вам рейс, максимально удовлетворяющий Ваши требования.</string>
    <string name="product_description_credit_education_online">Доступное европейское образование MBA не выходя из дома. По завершению программы каждый из участников получает сертификат от MMU Business School.</string>
    <string name="menu_item_title_news">Новости</string>
    <string name="menu_item_title_mail">Сообщения</string>
    <string name="menu_item_title_calendar">Календарь</string>
    <string name="menu_item_title_products">Продукты</string>
    <string name="menu_item_title_briefcase">Портфель</string>
    <string name="menu_item_title_docs">Документы</string>
    <string name="menu_item_title_study">Обучение</string>
    <string name="menu_item_title_browser">Браузер</string>
    <string name="menu_item_title_settings">Настройка</string>
    <string name="menu_item_title_demo">Демо - режим</string>
    <string name="fast_pay">Заплати\nбыстро</string>
    <string name="communication">Связь</string>
    <string name="internet">Интернет</string>
    <string name="remittances">Переводы</string>
    <string name="banking">Банкинг</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="crash_toast_text">Ooooops! Приложение упало, но доклад может быть направлен разработчику, чтобы помочь решить проблему!</string>
    <string name="crash_dialog_title">Crash report</string>
    <string name="crash_dialog_text">Произошла непредвиденная ошибка! Пожалуйста, помогите нам исправить ее, отправив нам данные об ошибке. Все, что вам нужно сделать, это нажать OK.</string>
    <string name="crash_dialog_comment_prompt">Вы можете добавить свои комментарии (к примеру какие действия привели к падению приложения) ниже:</string>
    <string name="crash_dialog_ok_toast">Спасибо!</string>
    <string name="form_tv_last_name">Фамилия</string>
    <string name="form_tv_first_name">Имя</string>
    <string name="form_tv_middle_name">Отчество</string>
    <string name="form_tv_city">Город</string>
    <string name="form_tv_street">Улица</string>
    <string name="form_tv_house">Дом</string>
    <string name="form_tv_apartment">Кв</string>
    <string name="form_tv_email">Email</string>
    <string name="form_tv_phone">Телефон</string>
    <string name="form_tv_sum">сумма</string>
    <string name="form_tv_period">на срок</string>
    <string name="form_tv_sum_from_to">от 500 до 100</string>
    <string name="form_tv_period_to">до 1 года</string>
    <string name="form_tv_age">возвраст</string>
    <string name="form_tv_placement">трудоустройство</string>
    <string name="form_tv_certificate_income">справка о доходах</string>
    <string name="form_tv_work_experience">рабочий стаж</string>
    <string name="form_tv_pledge_form">форма залога</string>
    <string name="form_tv_pledge">залог</string>
    <string name="provider">Провайдер</string>
    <string name="summa">Сумма</string>
    <string name="total">Суммарно</string>
    <string name="commission">Коммисия</string>
    <string name="send">Отправить</string>
    <string name="contract_number">Номер договора</string>
    <string name="from_card">С карты</string>
    <string name="on_card">На карту</string>
    <string name="settings_wifi">Настройки Wi-Fi</string>
    <string name="settings_screen_sound">Экран и Звук</string>
    <string name="settings_social">Соц. сети</string>
    <string name="settings_webrtc">Настройки WebRTC</string>
    <string name="settings_monitor">Мониторинг</string>
    <string name="settings_server">Выберите сервер</string>
    <string name="settings_on_off_monitoring">Мониторинг вкл/выкл</string>
    <string name="settings_demo">Demo - режим</string>
    <string name="adjust_media_player_volume">Регулировка громкости плеера</string>
    <string name="adjust_ringer_volume"> Регулировка громкости звонка</string>
    <string name="adjust_alarm_volume">Регулировка громкости предупреждения</string>
    <string name="adjust_notification_volume">Регулировка громкости уведомления</string>
    <string name="change_the_brightness">Уровень яркости</string>
    <string name="pref_videosettings_key">video_settings_key</string>
    <string name="pref_videosettings_title">WebRTC видео настройки.</string>
    <string name="pref_videocall_key">videocall_preference</string>
    <string name="pref_videocall_title">Видеозвонок.</string>
    <string name="pref_videocall_dlg">Включить видео в режиме разговора.</string>
    <string name="pref_videocall_default">true</string>
    <string name="pref_resolution_key">resolution_preference</string>
    <string name="pref_resolution_title">Разрешение видео.</string>
    <string name="pref_resolution_dlg">Выберите разрешение видео.</string>
    <string name="pref_resolution_default">Default</string>
    <string name="pref_fps_key">fps_preference</string>
    <string name="pref_fps_title">Камера fps.(кадров в секунду)</string>
    <string name="pref_fps_dlg">Выберите fps.(кадров в секунду)</string>
    <string name="pref_fps_default">Default</string>
    <string name="pref_startvideobitrate_key">startvideobitrate_preference</string>
    <string name="pref_startvideobitrate_title">Настройка битрейта.</string>
    <string name="pref_startvideobitrate_dlg">Настройка битрейта.</string>
    <string name="pref_startvideobitrate_default">Default</string>
    <string name="pref_startvideobitratevalue_key">startvideobitratevalue_preference</string>
    <string name="pref_startvideobitratevalue_title">Видео битрейт.</string>
    <string name="pref_startvideobitratevalue_dlg">Установите видео-битрейт в килобитах. (kbps)</string>
    <string name="pref_startvideobitratevalue_default">1000</string>
    <string name="pref_videocodec_key">videocodec_preference</string>
    <string name="pref_videocodec_title">Видео-кодек по умолчанию</string>
    <string name="pref_videocodec_dlg">Выберите видео кодек.</string>
    <string name="pref_videocodec_default">VP8</string>
    <string name="pref_hwcodec_key">hwcodec_preference</string>
    <string name="pref_hwcodec_title">Аппаратное ускорение.</string>
    <string name="pref_hwcodec_dlg">Используется аппаратное ускорение (если доступно).</string>
    <string name="pref_hwcodec_default">true</string>
    <string name="pref_audiosettings_key">audio_settings_key</string>
    <string name="pref_audiosettings_title">WebRTC настройки звука.</string>
    <string name="pref_startaudiobitrate_key">startaudiobitrate_preference</string>
    <string name="pref_startaudiobitrate_title">Настройки битрейда звука.</string>
    <string name="pref_startaudiobitrate_dlg">Настройки битрейда звука.</string>
    <string name="pref_startaudiobitrate_default">Default</string>
    <string name="pref_startaudiobitratevalue_key">startaudiobitratevalue_preference</string>
    <string name="pref_startaudiobitratevalue_title">Битрейд аудио кодека.</string>
    <string name="pref_startaudiobitratevalue_dlg">Установите аудио-битрейт в килобитах. (kbps)</string>
    <string name="pref_startaudiobitratevalue_default">256</string>
    <string name="pref_audiocodec_key">audiocodec_preference</string>
    <string name="pref_audiocodec_title">Аудио-кодек по умолчанию.</string>
    <string name="pref_audiocodec_dlg">Выберите аудио кодек.</string>
    <string name="pref_audiocodec_default">ISAC</string>
    <string name="pref_miscsettings_key">misc_settings_key</string>
    <string name="pref_miscsettings_title">Различные настройки.</string>
    <string name="pref_cpu_usage_detection_key">cpu_usage_detection</string>
    <string name="pref_cpu_usage_detection_title">CPU overuse detection.</string>
    <string name="pref_cpu_usage_detection_dlg">Adapt transmission to CPU status.</string>
    <string name="pref_cpu_usage_detection_default" translatable="false">true</string>
    <string name="pref_room_server_url_key">room_server_url_preference</string>
    <string name="pref_room_server_url_title">URL сигнального сервера.</string>
    <string name="pref_room_server_url_dlg">Введите URL сигнального сервера.</string>
    <string name="pref_room_server_url_default" translatable="false">http://95.213.170.164:8080</string>
    <string name="pref_displayhud_key">displayhud_preference</string>
    <string name="pref_displayhud_title">Отображать статистику.</string>
    <string name="pref_displayhud_dlg">Отображать статистику.</string>
    <string name="pref_displayhud_default" translatable="false">false</string>
    <string name="type">Тип</string>
    <string name="name">Имя</string>
    <string name="date">Дата</string>
    <string name="size">Размер</string>
</resources>