<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory
        android:key="@string/pref_videosettings_key"
        android:title="@string/pref_videosettings_title">

        <CheckBoxPreference
            android:defaultValue="@string/pref_videocall_default"
            android:dialogTitle="@string/pref_videocall_dlg"
            android:key="@string/pref_videocall_key"
            android:title="@string/pref_videocall_title" />

        <ListPreference
            android:defaultValue="@string/pref_resolution_default"
            android:dialogTitle="@string/pref_resolution_dlg"
            android:entries="@array/videoResolutions"
            android:entryValues="@array/videoResolutionsValues"
            android:key="@string/pref_resolution_key"
            android:title="@string/pref_resolution_title" />

        <ListPreference
            android:defaultValue="@string/pref_fps_default"
            android:dialogTitle="@string/pref_fps_dlg"
            android:entries="@array/cameraFps"
            android:entryValues="@array/cameraFps"
            android:key="@string/pref_fps_key"
            android:title="@string/pref_fps_title" />

        <ListPreference
            android:defaultValue="@string/pref_startvideobitrate_default"
            android:dialogTitle="@string/pref_startvideobitrate_dlg"
            android:entries="@array/startBitrate"
            android:entryValues="@array/startBitrate"
            android:key="@string/pref_startvideobitrate_key"
            android:title="@string/pref_startvideobitrate_title" />

        <EditTextPreference
            android:defaultValue="@string/pref_startvideobitratevalue_default"
            android:dialogTitle="@string/pref_startvideobitratevalue_dlg"
            android:inputType="number"
            android:key="@string/pref_startvideobitratevalue_key"
            android:title="@string/pref_startvideobitratevalue_title" />

        <ListPreference
            android:defaultValue="@string/pref_videocodec_default"
            android:dialogTitle="@string/pref_videocodec_dlg"
            android:entries="@array/videoCodecs"
            android:entryValues="@array/videoCodecs"
            android:key="@string/pref_videocodec_key"
            android:title="@string/pref_videocodec_title" />

        <CheckBoxPreference
            android:defaultValue="@string/pref_hwcodec_default"
            android:dialogTitle="@string/pref_hwcodec_dlg"
            android:key="@string/pref_hwcodec_key"
            android:title="@string/pref_hwcodec_title" />

    </PreferenceCategory>

    <PreferenceCategory
        android:key="@string/pref_audiosettings_key"
        android:title="@string/pref_audiosettings_title">

        <ListPreference
            android:defaultValue="@string/pref_startaudiobitrate_default"
            android:dialogTitle="@string/pref_startaudiobitrate_dlg"
            android:entries="@array/startBitrate"
            android:entryValues="@array/startBitrate"
            android:key="@string/pref_startaudiobitrate_key"
            android:title="@string/pref_startaudiobitrate_title" />

        <EditTextPreference
            android:defaultValue="@string/pref_startaudiobitratevalue_default"
            android:dialogTitle="@string/pref_startaudiobitratevalue_dlg"
            android:inputType="number"
            android:key="@string/pref_startaudiobitratevalue_key"
            android:title="@string/pref_startaudiobitratevalue_title" />

        <ListPreference
            android:defaultValue="@string/pref_audiocodec_default"
            android:dialogTitle="@string/pref_audiocodec_dlg"
            android:entries="@array/audioCodecs"
            android:entryValues="@array/audioCodecs"
            android:key="@string/pref_audiocodec_key"
            android:title="@string/pref_audiocodec_title" />
    </PreferenceCategory>

    <PreferenceCategory
        android:key="@string/pref_miscsettings_key"
        android:title="@string/pref_miscsettings_title">

        <CheckBoxPreference
            android:defaultValue="@string/pref_cpu_usage_detection_default"
            android:dialogTitle="@string/pref_cpu_usage_detection_dlg"
            android:key="@string/pref_cpu_usage_detection_key"
            android:title="@string/pref_cpu_usage_detection_title" />

        <EditTextPreference
            android:defaultValue="@string/pref_room_server_url_default"
            android:dialogTitle="@string/pref_room_server_url_dlg"
            android:inputType="text"
            android:key="@string/pref_room_server_url_key"
            android:title="@string/pref_room_server_url_title" />

        <CheckBoxPreference
            android:defaultValue="@string/pref_displayhud_default"
            android:dialogTitle="@string/pref_displayhud_dlg"
            android:key="@string/pref_displayhud_key"
            android:title="@string/pref_displayhud_title" />
    </PreferenceCategory>

</PreferenceScreen>
