<?xml version="1.0" encoding="utf-8"?>
<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:columnCount="6"
    android:orientation="horizontal">

    <TextView
        style="@style/FormTextView26"
        android:text="@string/form_tv_last_name" />

    <TextView
        style="@style/FormTextView26"
        android:text="@string/form_tv_first_name" />

    <TextView
        style="@style/FormTextView26"
        android:text="@string/form_tv_middle_name" />

    <EditText style="@style/FormEditText26" />

    <EditText style="@style/FormEditText26" />

    <EditText style="@style/FormEditText26" />

    <TextView
        style="@style/FormTextView26"
        android:text="@string/form_tv_city" />

    <TextView
        style="@style/FormTextView26"
        android:text="@string/form_tv_street" />

    <TextView
        style="@style/FormTextView16"
        android:text="@string/form_tv_house" />

    <TextView
        style="@style/FormTextView16"
        android:text="@string/form_tv_apartment" />

    <EditText style="@style/FormEditText26" />

    <EditText style="@style/FormEditText26" />

    <EditText style="@style/FormEditText16" />

    <EditText style="@style/FormEditText16" />

    <TextView
        style="@style/FormTextView36"
        android:text="@string/form_tv_email" />

    <TextView
        style="@style/FormTextView36"
        android:text="@string/form_tv_phone" />

    <EditText style="@style/FormEditText36" />

    <EditText style="@style/FormEditText36" />

</GridLayout>
