<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal"
    android:background="@drawable/app_background" >

    <ScrollView
        android:layout_width="@dimen/base200dp720sw"
        android:layout_height="match_parent"
        android:layout_margin="@dimen/base15dp720sw">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                style="@style/ProductMainTitle"
                android:text="@string/product_title_credit"/>

            <RelativeLayout
                android:id="@+id/product_without_bail_image"
                android:layout_width="match_parent"
                android:layout_height="@dimen/base100dp720sw"
                android:background="@color/gray">

                <TextView
                    style="@style/ProductTitle"
                    android:text="@string/product_title_credit_without_bail"/>

            </RelativeLayout>

            <TextView
                android:id="@+id/product_without_bail_text"
                style="@style/ProductDescription"
                android:text="@string/product_description_credit_without_bail" />

            <RelativeLayout
                android:id="@+id/product_bail_image"
                android:layout_width="match_parent"
                android:layout_height="@dimen/base100dp720sw"
                android:background="@color/gray">

                <TextView
                    style="@style/ProductTitle"
                    android:text="@string/product_title_credit_bail"/>

            </RelativeLayout>

            <TextView
                android:id="@+id/product_bail_text"
                style="@style/ProductDescription"
                android:text="@string/product_description_credit_bail" />

        </LinearLayout>

    </ScrollView>

    <ScrollView
        android:layout_width="@dimen/base200dp720sw"
        android:layout_height="match_parent"
        android:layout_margin="@dimen/base15dp720sw">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                style="@style/ProductMainTitle"
                android:text="@string/product_title_insurance"/>

            <RelativeLayout
                android:id="@+id/product_life_insurance_image"
                android:layout_width="match_parent"
                android:layout_height="@dimen/base100dp720sw"
                android:background="@color/gray">

                <TextView
                    style="@style/ProductTitle"
                    android:text="@string/product_title_life_insurance"/>

            </RelativeLayout>

            <TextView
                android:id="@+id/product_life_insurance_text"
                style="@style/ProductDescription"
                android:text="@string/product_description_life_insurance" />

            <RelativeLayout
                android:id="@+id/product_risk_insurance_image"
                android:layout_width="match_parent"
                android:layout_height="@dimen/base100dp720sw"
                android:background="@color/gray">

                <TextView
                    style="@style/ProductTitle"
                    android:text="@string/product_title_credit_risk_insurance"/>

            </RelativeLayout>

            <TextView
                android:id="@+id/product_risk_insurance_text"
                style="@style/ProductDescription"
                android:text="@string/product_description_credit_risk_insurance" />

        </LinearLayout>

    </ScrollView>

    <ScrollView
        android:layout_width="@dimen/base200dp720sw"
        android:layout_height="match_parent"
        android:layout_margin="@dimen/base15dp720sw">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                style="@style/ProductMainTitle"
                android:text="@string/product_title_tourism"/>

            <RelativeLayout
                android:id="@+id/product_tickets_image"
                android:layout_width="match_parent"
                android:layout_height="@dimen/base100dp720sw"
                android:background="@color/gray">

                <TextView
                    style="@style/ProductTitle"
                    android:text="@string/product_title_airline_tickets"/>

            </RelativeLayout>

            <TextView
                android:id="@+id/product_tickets_text"
                style="@style/ProductDescription"
                android:text="@string/product_description_airline_tickets" />

        </LinearLayout>

    </ScrollView>

    <ScrollView
        android:layout_width="@dimen/base200dp720sw"
        android:layout_height="match_parent"
        android:layout_margin="@dimen/base15dp720sw">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                style="@style/ProductMainTitle"
                android:text="@string/product_title_education"/>

            <RelativeLayout
                android:id="@+id/product_education_image"
                android:layout_width="match_parent"
                android:layout_height="@dimen/base100dp720sw"
                android:background="@color/gray">

                <TextView
                    style="@style/ProductTitle"
                    android:text="@string/product_title_credit_education_online"/>

            </RelativeLayout>

            <TextView
                android:id="@+id/product_education_text"
                style="@style/ProductDescription"
                android:text="@string/product_description_credit_education_online" />

        </LinearLayout>

    </ScrollView>




</LinearLayout>