<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/settings_background"
    android:padding="@dimen/base50dp720sw">

    <LinearLayout
        android:id="@+id/settings_left_menu"
        android:layout_width="@dimen/base270dp720sw"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/settings_wifi_menu_textView"
            style="@style/SettingsMenuItem"
            android:background="@drawable/settings_back_left"
            android:drawableStart="@android:drawable/ic_menu_mylocation"
            android:text="@string/settings_wifi" />

        <TextView
            android:id="@+id/settings_screen_menu_textView"
            style="@style/SettingsMenuItem"
            android:drawableStart="@android:drawable/ic_menu_manage"
            android:text="@string/settings_screen_sound" />

        <TextView
            android:id="@+id/settings_webrtc_menu_textView"
            style="@style/SettingsMenuItem"
            android:drawableStart="@android:drawable/ic_menu_call"
            android:text="@string/settings_webrtc" />

        <TextView
            android:id="@+id/settings_social_menu_textView"
            style="@style/SettingsMenuItem"
            android:drawableStart="@android:drawable/ic_menu_my_calendar"
            android:text="@string/settings_social"
            android:visibility="gone" />

        <TextView
            android:id="@+id/settings_monitoring_textView"
            style="@style/SettingsMenuItem"
            android:drawableStart="@android:drawable/ic_dialog_alert"
            android:text="@string/settings_monitor" />

        <TextView
            android:id="@+id/settings_servers_textView"
            style="@style/SettingsMenuItem"
            android:drawableStart="@android:drawable/ic_menu_myplaces"
            android:text="@string/settings_server" />
    </LinearLayout>

    <FrameLayout
        android:id="@+id/settings_fragment_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_toEndOf="@+id/settings_left_menu"
        android:background="@drawable/settings_back_right" />
</RelativeLayout>
